# mi_repo

./: README.md
LaTeX/ARTICULO/: references.bib  template.aux  template.blg  template.tex
LaTeX/DocLatexFnal/: Direcciones.eps  Figure2.eps  Rotor.eps  biblio.bib  biblio.bib.bak  direc.eps  p1.eps  p10.eps  p11.eps  p12.eps  p13.eps  p2.eps  p3.eps  p4.eps  p5.eps  p6.eps  p7.eps  p8.eps  p9.eps  paper_wtb.tex  paperthesislast.tex  paperthesislastone.aux  paperthesislastone.bbl  paperthesislastone.blg  paperthesislastone.dvi  paperthesislastone.tex  referencias  referencias.bak  svjour3.cls  template.aux  template.dvi  vali.eps  valida.eps
LaTeX/TEMPLATE/: template.tex
MatlabCodes/: DatosPrueba1.mat
ProgC/: AprendiendoEstructuras.c  Vigenere.c
ProgC/misPrimerosPasosC/: CMakeLists.txt  cash.c  cash2.c  credit.c  helloWorld.c  main.c  mayorAmenor.c  piramideInvertida.c  vigenere.c
Programas Java/.metadata/: version.ini
Programas Java/HelloWorld1/src/: HolaMundo.java
Programas Java/MiPrimerPrograma/src/: Declaracion_Operaciones.java  PrimeraClase.java  PruebaMatrix.java  dia1.java
Python/Ejercicios/: Mi primer programa.py
Robotics/: BarraCinq.stl  BarraDeux.stl  BarraQuatre.stl  BarraSix.stl  BarraTrois.stl  BarraUn.stl  Base.stl  PUM_Airfoil.m  PUM_CoordenadasFinal.txt  PUM_CoordenadasKUKA.txt  PUM_FnAnimation.m  PUM_FnKukaAnimation.m  PUM_FnPerfil.m  PUM_FnTrPuntos.m  PUM_FnTransformacion.m  PUM_FnVerification.m  PUM_Fn_AnlInvKR6.m  PUM_Fn_RotaX.m  PUM_Fn_RotaZ.m  PUM_Fn_Tras.m  PUM_Fn_slnTrigo.m  PUM_KUKACoordenadas.txt  PUM_fn_ReadSTL.m
(+39 files in other folders)
