cmake_minimum_required(VERSION 3.10)
project(misPrimerosPasosC C)

set(CMAKE_C_STANDARD 11)


add_executable(mayorAmenor mayorAmenor.c)
add_executable(main helloWorld.c)
add_executable(piramideInvertida piramideInvertida.c)
add_executable(cash cash.c)
add_executable(cash2 cash2.c)
add_executable(credit credit.c)
add_executable(vigenere vigenere.c)
